--- a/Lab3.ipynb
+++ b/Lab3.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -351,16 +351,52 @@
     }
    ],
    "source": [
-    "print(forecast.shape, test.shape)  # Printing the shapes of the forecast and test data for comparison\n"
+    "print(forecast.shape, test.shape)  # Printing the shapes of the forecast and test data for comparison\n",
+    "from sklearn.metrics import mean_absolute_error\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T10:20:16.222157500Z",
-     "start_time": "2024-01-03T10:20:16.216323800Z"
+     "end_time": "2024-01-03T13:08:15.764163500Z",
+     "start_time": "2024-01-03T13:08:15.759797200Z"
     }
    },
    "id": "1de30d83a99be45"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "316.88838164112684\n"
+     ]
+    }
+   ],
+   "source": [
+    "mae = mean_absolute_error(forecast, test_fit)\n",
+    "print(mae)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T13:10:08.332960800Z",
+     "start_time": "2024-01-03T13:10:08.313002500Z"
+    }
+   },
+   "id": "4f3604474d89f780"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c0ac2153b9864cc4"
   }
  ],
  "metadata": {
